simple fscore analysis, EM singularity semi-fixed by making variance constant

--- a/proposal/mybib.bib
+++ b/proposal/mybib.bib
@@ -88,6 +88,21 @@
   number = {4},
   pages = {311-319},
 }
+@inproceedings{kehling2014,
+  author = {C. Kehling and J. Abe{\ss}er and C. Dittmar and G. Schuller},
+  title = {AUTOMATIC TABLATURE TRANSCRIPTION OF ELECTRIC GUITAR RECORDINGS BY ESTIMATION OF SCORE- AND INSTRUMENT-RELATED PARAMETERS},
+  booktitle = {Proc. of the 17th Int. Conference on Digital Audio Effects (DAFx-14)},
+  month = {September},
+  address = {Erlangen, Germany},
+  year = {2014}
+}
+@inproceedings{maezawa2009,
+  author = {A. Maezawa and K. Itoyama and T. Takahashi and T. Ogata and H.G. Okuno},
+  title = {Bowed String Sequence Estimation of a Violin Based on Adaptive Audio Signal Classification and Context-Dependent Error Correction},
+  booktitle = {Proc. of the 11th IEEE International Symposium on Multimedia (ISM 2009}},
+  pages = {9-16},
+  year = {2009}
+}
 @inproceedings{ogrady2009,
   author = {P. O'Grady and S. Rickard},
   title = {Automatic hexaphonic guitar transcription using non-negative constraints},
