clustering eval capabilty

--- a/proposal/mybib.bib
+++ b/proposal/mybib.bib
@@ -39,6 +39,13 @@
   number = {5},
   pages = {1035-1047}
 }
+@inproceedings{dittmar2013,
+  author = {C. Dittmar and A. M{\"a}anchen and J. Abe{\ss}er},
+  title = {Real-time guitar string detection for music education software},
+  booktitle = {Proceedings of the 14th International Workshop on Image Analysis for Multimedia Interactive Services (WIAMIS)},
+  year = {2013},
+  pages = {1-4}
+}
 @inproceedings{dixon2006,
   author = {S. Dixon},
   title = {Onset Detection Revisited},
@@ -103,6 +110,14 @@
   pages = {9-16},
   year = {2009}
 }
+@INPROCEEDINGS{ng2001,
+    author = {A. Ng and M. Jordan and Y. Weiss},
+    title = {On Spectral Clustering: Analysis and an algorithm},
+    booktitle = {Advances in Neural Information Processing Systems},
+    year = {2001},
+    pages = {849-856},
+    publisher = {MIT Press}
+}
 @inproceedings{ogrady2009,
   author = {P. O'Grady and S. Rickard},
   title = {Automatic hexaphonic guitar transcription using non-negative constraints},
@@ -110,6 +125,16 @@
   pages = {1-6},
   address = {Dublin, Ireland}
   year = {2009}
+}
+@article{shi2000,
+  author = {J. Shi and J. Malik},
+  title = {Normalized cuts and image segmentation},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year = {2000},
+  volume = {22},
+  number = {8},
+  month = {August},
+  pages = {888-905}
 }
 @inproceedings{hrybyk2010,
   author = {A. Hrybyk and Y. Kim},
