saving thesis progress

--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -39,6 +39,13 @@
   number = {5},
   pages = {1035-1047}
 }
+@inproceedings{dittmar2013,
+  author = {C. Dittmar and A. M{\"a}anchen and J. Abe{\ss}er},
+  title = {Real-time guitar string detection for music education software},
+  booktitle = {Proceedings of the 14th International Workshop on Image Analysis for Multimedia Interactive Services (WIAMIS)},
+  year = {2013},
+  pages = {1-4}
+}
 @inproceedings{dixon2006,
   author = {S. Dixon},
   title = {Onset Detection Revisited},
@@ -46,6 +53,16 @@
   address = {Montreal, Canada},
   month = {September},
   year = {2006}
+}
+@article{faria2010,
+  author = {S. Faria and G. Soromenho},
+  title = {Fitting mixtures of linear regressions},
+  journal = {Journal of Statistical Computation and Simulation},
+  year = {2010},
+  volume = {80},
+  number = {2},
+  pages = {201-225},
+  month = {February}
 }
 @book{fletcher1998,
   author = {N. Fletcher and T. Rossing},
@@ -62,6 +79,32 @@
   number = {6},
   pages = {749-761}
 }
+@inproceedings{hrybyk2010,
+  author = {A. Hrybyk and Y. Kim},
+  title = {Combined Audio and Video for Guitar Chord Identification},
+  booktitle = {Proc. of the 11th International Society for Music Information Retrieval (ISMIR)},
+  address = {Utrecht, Netherlands},
+  pages = {159-164},
+  year = {2010}
+}
+@article{galembo1994
+  author = {A. Galembo and A. Askenfelt},
+  title = {Measuring inharmonicity through pitch extraction},
+  journal = {STL-QPSR},
+  volume = {35},
+  number = {1},
+  year = {1994},
+  pages = {135-144}
+}
+@article{galembo1999
+  author = {Alexander Galembo and Anders Askenfelt},
+  journal = {IEEE Transactions on Speech and Audio Processing},
+  volume = {7},
+  number = {2},
+  year = {1999},
+  month = {March}
+  pages = {197-203},
+}
 @inproceedings{goto2003,
   author = {M. Goto and H. Hashiguchi and T. Nishimura and R. Oka},
   title = {R{W}{C} Music Database: Music Genre Database and Musical Instrument Sound Database},
@@ -69,15 +112,6 @@
   pages = {229-230},
   month = {October},
   year = {2003}
-}
-@inproceedings{noll1969,
-  author = {A. Noll},
-  title = {Pitch Determination of Human Speech by the Harmonic Product Spectrum, the Harmonic Sum Spectrum, and a Maximum Likelihood Estimate},
-  booktitle = {Computer Processing in Communications Proceedings},
-  address = {New York, N.Y.},
-  pages = {779-797},
-  month = {April},
-  year = {1969}
 }
 @article{jarvelainen2003,
   author = {H. J{\"a}rvel{\"a}inen and V. V{\"a}lim{\"a}ki and T. Verma},
@@ -88,6 +122,38 @@
   number = {4},
   pages = {311-319},
 }
+@inproceedings{kehling2014,
+  author = {C. Kehling and J. Abe{\ss}er and C. Dittmar and G. Schuller},
+  title = {AUTOMATIC TABLATURE TRANSCRIPTION OF ELECTRIC GUITAR RECORDINGS BY ESTIMATION OF SCORE- AND INSTRUMENT-RELATED PARAMETERS},
+  booktitle = {Proc. of the 17th Int. Conference on Digital Audio Effects (DAFx-14)},
+  month = {September},
+  address = {Erlangen, Germany},
+  year = {2014}
+}
+@inproceedings{maezawa2009,
+  author = {A. Maezawa and K. Itoyama and T. Takahashi and T. Ogata and H.G. Okuno},
+  title = {Bowed String Sequence Estimation of a Violin Based on Adaptive Audio Signal Classification and Context-Dependent Error Correction},
+  booktitle = {Proc. of the 11th IEEE International Symposium on Multimedia (ISM 2009}},
+  pages = {9-16},
+  year = {2009}
+}
+@inproceedings{noll1969,
+  author = {A. Noll},
+  title = {Pitch Determination of Human Speech by the Harmonic Product Spectrum, the Harmonic Sum Spectrum, and a Maximum Likelihood Estimate},
+  booktitle = {Computer Processing in Communications Proceedings},
+  address = {New York, N.Y.},
+  pages = {779-797},
+  month = {April},
+  year = {1969}
+}
+@INPROCEEDINGS{ng2001,
+    author = {A. Ng and M. Jordan and Y. Weiss},
+    title = {On Spectral Clustering: Analysis and an algorithm},
+    booktitle = {Advances in Neural Information Processing Systems},
+    year = {2001},
+    pages = {849-856},
+    publisher = {MIT Press}
+}
 @inproceedings{ogrady2009,
   author = {P. O'Grady and S. Rickard},
   title = {Automatic hexaphonic guitar transcription using non-negative constraints},
@@ -96,21 +162,13 @@
   address = {Dublin, Ireland}
   year = {2009}
 }
-@inproceedings{hrybyk2010,
-  author = {A. Hrybyk and Y. Kim},
-  title = {Combined Audio and Video for Guitar Chord Identification},
-  booktitle = {Proc. of the 11th International Society for Music Information Retrieval (ISMIR)},
-  address = {Utrecht, Netherlands},
-  pages = {159-164},
-  year = {2010}
-}
-@article{faria2010,
-  author = {S. Faria and G. Soromenho},
-  title = {Fitting mixtures of linear regressions},
-  journal = {Journal of Statistical Computation and Simulation},
-  year = {2010},
-  volume = {80},
-  number = {2},
-  pages = {201-225},
-  month = {February}
+@article{shi2000,
+  author = {J. Shi and J. Malik},
+  title = {Normalized cuts and image segmentation},
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year = {2000},
+  volume = {22},
+  number = {8},
+  month = {August},
+  pages = {888-905}
 }
