thesis doc backup

--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -39,6 +39,14 @@
   number = {5},
   pages = {1035-1047}
 }
+@inproceedings{burlet2013,
+  author = {G. Burlet and I. Fujinaga},
+  title = {Robotaba guitar tablature transcription framework},
+  booktitle = {Proceedings of the IEEE Transactions on Speech and Language Processing},
+  address = {Curitiba, Brazil},
+  month = {November},
+  year = {2013}
+}
 @inproceedings{dittmar2013,
   author = {C. Dittmar and A. M{\"a}anchen and J. Abe{\ss}er},
   title = {Real-time guitar string detection for music education software},
@@ -79,6 +87,20 @@
   number = {6},
   pages = {749-761}
 }
+@inproceedings{galembo1979,
+  author = {A. Galembo},
+  title = {Method for objective evaluation of the sound quality in piano trebles (in Russian)},
+  booktitle = {Proc. of 18th Acoust. Conf. of Czechoslovakia},
+  page = {45-48},
+  year = {1979}
+}
+@book{galembo1987,
+  author = {A. Galembo},
+  title = {The quality of piano tones (in Russian)},
+  year = {1987},
+  publisher = {Legkaya Industria Press},
+  address = {Moscow}
+}
 @inproceedings{hrybyk2010,
   author = {A. Hrybyk and Y. Kim},
   title = {Combined Audio and Video for Guitar Chord Identification},
@@ -86,6 +108,14 @@
   address = {Utrecht, Netherlands},
   pages = {159-164},
   year = {2010}
+}
+@inproceedings{gagnon2003,
+  author = T. Gagnon and S. Larouche and R. Lefebvre},
+  title = {A neural network approach for preclassification in musical chords recognition},
+  booktitle = {Conf. Rec. 37th Asilomar Conf. Signals, Systems, Comput.},
+  year = {2003},
+  volume = {2},
+  pages = {2106-2109}
 }
 @article{galembo1994
   author = {A. Galembo and A. Askenfelt},
@@ -113,6 +143,14 @@
   month = {October},
   year = {2003}
 }
+@inproceedings{hodgkinson2009,
+  author = {M. Hodgkinson and J. Wang and J. Timoney and V. Lazzarini},
+  title = {Handling Inharmonic series with median-adjustive trajectories},
+  booktitle = {Proc. of the 12th Int. Conference on Digital Audio Effects (DAFx-09)},
+  month = {September},
+  year = {2009},
+  address ={Como, Italy}
+}
 @article{jarvelainen2003,
   author = {H. J{\"a}rvel{\"a}inen and V. V{\"a}lim{\"a}ki and T. Verma},
   title = {Perception and adjustment of pitch in inharmonic string instrument sounds},
@@ -130,6 +168,14 @@
   address = {Erlangen, Germany},
   year = {2014}
 }
+@inproceedings{macrae2010,
+  author = {R. Macrae and S. Dixon},
+  title = {A guitar tablature score follower},
+  booktitle = {Proc. Int. Conf. Multimedia Expo},
+  pages = {725-726},
+  year = {2010}
+}
+R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
 @inproceedings{maezawa2009,
   author = {A. Maezawa and K. Itoyama and T. Takahashi and T. Ogata and H.G. Okuno},
   title = {Bowed String Sequence Estimation of a Violin Based on Adaptive Audio Signal Classification and Context-Dependent Error Correction},
@@ -161,6 +207,21 @@
   pages = {1-6},
   address = {Dublin, Ireland}
   year = {2009}
+}
+@inproceedings{radisav2004,
+  author = {A. Radisavljevic and P. Driessen},
+  title = {Path difference learning for guitar fingering problem},
+  booktitle = {Proc. Int. Comput. Music Conf. (ICMC04)},
+  year = {2004}
+}
+@article{rauhala2007,
+  author = {J. Rauhala and H. M. Lehtonen and V. V{\"a}lim{\"a}ki},
+  title = {Fast automatic inharmonicity estimation algorithm},
+  journal = {Journal of the Acoustical Society of America},
+  year = {2007},
+  volume = {121},
+  number = {5},
+  pages = {184-189},
 }
 @article{shi2000,
   author = {J. Shi and J. Malik},
